# pydantic-ai-exploration

./: hello.py  pyproject.toml
hello_world/: hello.py
pandas_runner/: README.md  agents.py  data.py  main.py
