[project]
name = "pydantic-ai-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30.0",
  "duckdb>=1.1.3",
  "observers>=0.1.4",
  "pandas>=2.2.3",
  "pydantic-ai>=0.0.12",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = ["ipython>=8.30.0"]
